--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,10 +16,15 @@ dependencies = [
     "pydantic",
     "openai",
     "feedparser",
+    "voyageai",
+    "scikit-learn",
+    "numpy",
 ]
 
 [project.scripts]
 ell_boilerplate = "ell_boilerplate.main:main"
+ell_initialize_db = "ell_boilerplate.utils.evaluations_table:main"
+ell_dbstructure = "ell_boilerplate.utils.datastructure:main"
 
 [tool.setuptools]
 package-dir = {"" = "src"}
